tests/error/struct_errors/constructor_missing_arg.py
from guppylang.decorator import guppy


@guppy.struct
class MyStruct:
    x: int


@guppy
def main() -> None:
    MyStruct()


guppy.compile(main)
