tests/error/struct_errors/constructor_missing_arg.err
Error: Not enough arguments (at $FILE:11:12)
   | 
 9 | @guppy
10 | def main() -> None:
11 |     MyStruct()
   |             ^^ Missing argument (expected 1, got 0)

Note: Function signature is `int -> MyStruct`

Guppy compilation failed due to 1 previous error
